--- a/mi_estilo.css
+++ b/mi_estilo.css
@@ -22,7 +22,15 @@ body,html {
 	width: 100%;
 }
 .section3 .thumbnail{
-	height: 100%;
+	height: 70vh;
+}
+.section3 .thumbnail img{
+	
+	height: 25vh;
+}
+.section3 .ver_mas{
+	position: absolute;
+	bottom: 30px;
 }
 .section4{
 	background-color: grey;
@@ -41,4 +49,7 @@ body,html {
 .section4 input{
 	color: black;
 
+}
+.map{
+	text-align: center;
 }
